[gd_scene load_steps=3 format=3 uid="uid://w754suxf3d2p"]

[ext_resource type="Script" path="res://scripts/parametre.gd" id="1_uvbot"]
[ext_resource type="FontFile" uid="uid://bfkdrency3h1k" path="res://assets/fonts/PressStart2P-Regular.ttf" id="2_51cju"]

[node name="parametre" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uvbot")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 239
theme_override_constants/margin_right = 239

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.501961, 0.137255, 0.109804, 1)
theme_override_fonts/font = ExtResource("2_51cju")
theme_override_font_sizes/font_size = 60
text = "Parametre Audio"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 50
columns = 2

[node name="music-label2" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.501961, 0.137255, 0.109804, 1)
theme_override_fonts/font = ExtResource("2_51cju")
theme_override_font_sizes/font_size = 24
text = "Music"

[node name="music-slider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFX-label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.501961, 0.137255, 0.109804, 1)
theme_override_fonts/font = ExtResource("2_51cju")
theme_override_font_sizes/font_size = 24
text = "SFX"

[node name="SFX-slider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="retour-btn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.976471, 0.972549, 1)
theme_override_colors/font_color = Color(0.501961, 0.137255, 0.109804, 1)
theme_override_fonts/font = ExtResource("2_51cju")
theme_override_font_sizes/font_size = 30
text = "Retour"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = &"SFX"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/music-slider" to="." method="_on_musicslider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/SFX-slider" to="." method="_on_sf_xslider_value_changed"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/retour-btn" to="." method="_on_retourbtn_button_down"]
